# noisy-student

./: .gitignore  CLAUDE.md  README.md  modal_app.py  pyproject.toml
docs/: experimental_plan.md
experiments/: debug_grpo.py  inspect_completions.py  v1_simple.py  v4_grpo.py
notebooks/: 01_rl_basics.ipynb  02_trl_intro.ipynb
results/: summary.csv
results/runs/: baseline_v1_001.json  full_v1_001.json  pseudo_label_k4_001.json  pseudo_label_k8_001.json  v1_5_001.json
scripts/: test_reward.py  train_grpo_simple.py
src/: __init__.py
src/data/: gsm8k.py  pseudo_label.py
src/training/: rewards.py
